[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]

requires-python = ">=3.8"

name = "xy_string"

authors = [{ name = "余洋", email = "yuyangit.0515@qq.com" }]
description = "类型辅助模块"

readme = "README.md"

dynamic = ["version"]

classifiers = ["Programming Language :: Python :: 3.8"]

dependencies = ["xy_type"]

[project.scripts]

[tool.setuptools.packages.find]
where = ["./"]
include = ["xy_string"] # alternatively: `exclude = ["additional*"]`
namespaces = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = { file = "VERSION" }
